Update and rename musik.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<audio id="music" src="musik.mp3" loop></audio>
+<audio id="music" src="SpotiDown.App - bergema sampai selamanya - Stripped Version - Nadhif Basalamah.mp3" loop></audio>
 
 <button onclick="music.play()">Play</button>
 <button onclick="music.pause()">Pause</button>
