--- a/index.html
+++ b/index.html
@@ -2,15 +2,8 @@
 <html>
 <body>
 
-<audio id="music" src="SpotiDown.App - bergema sampai selamanya - Stripped Version - Nadhif Basalamah.mp3" loop></audio>
+<audio id="music" src="SpotiDown.App - bergema sampai selamanya - Stripped Version - Nadhif Basalamah.mp3" auto play loop></audio>
 
-<button onclick="music.play()">Play</button>
-<button onclick="music.pause()">Pause</button>
-
-<script>
-const music = document.getElementById('music');
-music.volume = 0.5;
-</script>
 
 </body>
 </html>
