--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<audio src="SpotiDown.App - bergema sampai selamanya - Stripped Version - Nadhif Basalamah.mp3" autoplay loop></audio>
-
+<audio id="musik" src="SpotiDown.App - bergema sampai selamanya - Stripped Version - Nadhif Basalamah.mp3" loop></audio>
+<button>"onclick="play.musik()">play</button>
 
 </body>
 </html>
