--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <audio id="musik" src="SpotiDown.App - bergema sampai selamanya - Stripped Version - Nadhif Basalamah.mp3" loop></audio>
-<button>"onclick="play.musik()">play</button>
+<button> onclick="play.musik()">play</button>
 
 </body>
 </html>
