--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<audio id="musik" src="SpotiDown.App - bergema sampai selamanya - Stripped Version - Nadhif Basalamah.mp3" loop></audio>
-<button> onclick="play.musik()">play</button>
-
+<audio autoplay>
+  <source src = " SpotiDown.App - bergema sampai
+    selamanya - Stripped Version
+    - Nadhif Basalamah.mp3" type="audio/,mp3"/>
+</audio>
 </body>
 </html>
