--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <body>
 
 <!-- Gambar yang bisa ditekan -->
-<img src="image04.png" alt="Klik untuk Musik" style="width:200px;cursor:pointer;" onclick="playMusic()">
+<img src="image04.jpg" alt="Klik untuk Musik" style="width:200px;cursor:pointer;" onclick="playMusic()">
 
 <!-- Audio -->
-<audio id="music" src="musik.mp3"></audio>
+<audio id="music" src="SpotiDown.App - bergema sampai selamanya - Stripped Version - Nadhif Basalamah.mp3"></audio>
 
 <script>
 const music = document.getElementById('music');
